# reports

./: .coverage  README.md  main.py  pyproject.toml  run_checks.sh
reports/: average_rating.py  csv_utils.py
tests/: .gitignore  test_average_rating.py
