[tool.poetry]
name = "reports"
version = "0.1.0"
description = ""
authors = ["HelegKumachev <kumachev.oleg@gmail.com>"]
readme = "README.md"
packages = [{include = "reports"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tabulate = "^0.9.0"

[poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
